aks-lab-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-lab-app
spec:
  replicas: 1
  revisionHistoryLimit: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: aks-lab-app

  template:
    metadata:
      labels:
        app: aks-lab-app
    spec:
      containers:
        - name: aks-lab-app
          image: akslabwl.azurecr.io/aks-lab-app:23
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
