aks-lab-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-lab-app-service
spec:
  type: ClusterIP
  selector:
    app: aks-lab-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
