aks-lab-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-lab-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: aks-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aks-lab-app-service
                port:
                  number: 80
